--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "test": "nyc mocha"
   },
-
   "license": "ISC",
   "keywords": [],
   "description": "",
@@ -19,6 +18,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
+    "chai-json-schema": "^1.5.1",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0"
   }
